<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <EditText
        android:id="@+id/Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fullName"
        android:textColor="@color/textColor"
        android:layout_margin="20dp"/>

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:textColor="@color/textColor"
        android:layout_margin="20dp"/>

    <EditText
        android:id="@+id/et_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_otp"
        android:clickable="false"
        android:textColor="@color/textColor"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/btn_generate_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/generate_otp"
        android:background="@color/colorAccent"
        android:textColor="@color/textColor"
        android:layout_margin="20dp"/>
    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/verify_sign_in"
        android:background="@color/colorAccent"
        android:textColor="@color/textColor"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/logintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_user"
        android:layout_gravity="center"
        android:textStyle="italic"
        android:layout_margin="20dp"
        />

</LinearLayout>