<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dp" >




    <EditText
        android:id="@+id/Userid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:textColor="@color/textColor"
        android:layout_margin="20dp"/>

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passowrd"
        android:inputType="textPassword"
        android:textColor="@color/textColor"
        android:layout_margin="5dp"/>
    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot"
        android:layout_gravity="center"
        android:textStyle="italic"
        android:layout_margin="20dp"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:background="@color/colorAccent"
        android:textColor="@color/textColor"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/signuptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newUser"
        android:layout_gravity="center"
        android:textStyle="italic"
        android:layout_margin="10dp"
        />

</LinearLayout>